--- a/src/search.css
+++ b/src/search.css
@@ -1,13 +1,11 @@
-.search-result {
-    padding: 8px;
-    border-bottom: 1px solid #ddd;
+.search-results {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .search-box { 
     position: 'relative';
     display: 'flex';
-    alignItems: 'center';
-    justifyContent: 'center';
     margin: '20px' ;
 }
 
